Diploma-Project-2023/diploma-project-back-end/k8s/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
    - port: 3000
      #      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana
  #  sessionAffinity: None
  # IF LoadBalancer it is exposed to the internet
  type: ClusterIP
